# ScriptHub

./: .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/category/: CategoryGrid.tsx  CategoryManager.tsx  index.ts
src/components/import/: DropZone.tsx  FileImporter.tsx  index.ts
src/components/layout/: MainLayout.tsx  Sidebar.tsx  TopBar.tsx
src/components/modals/: CloseBehaviorModal.tsx
src/components/script/: ScriptCard.tsx  ScriptDetail.tsx  ScriptEditor.tsx  ScriptGrid.tsx  ScriptListItem.tsx  index.ts
src/components/settings/: SettingsPage.tsx
src/components/tag/: TagManager.tsx  (+2 more)
src/hooks/: index.ts  useBoxSelection.ts  useCopyScript.ts  useDragSort.ts  useKeyboardShortcuts.ts  useScriptItemLogic.tsx  useShortcuts.ts  useStorageInit.ts
src/i18n/: index.ts
src/services/: database.ts  exportFolder.ts  fileStorage.ts  githubService.ts  importFolder.ts  index.ts  initStorage.ts
src/stores/: categoryStore.ts  index.ts  scriptStore.ts  tagStore.ts  uiStore.ts  variableStore.ts
src/types/: category.ts  index.ts  script.ts  subscription.ts  tag.ts  transfer.ts  variable.ts
src/utils/: categoryIcons.ts  categoryUtils.ts  cn.ts  constants.ts  files.ts  index.ts  parseScript.ts
(+20 files in other folders)
